--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ defaults:
     values: {layout: default}
   - scope: {path: "news"}
     values: {crumbs: [{link: "/news/index.html", text: "news"}]}
-  - scope: {path: "ospo"}
-    values: {crumbs: [{link: "/ospo/", text: "ospo"}]}
+  - scope: {path: "guides"}
+    values: {crumbs: [{link: "/guides/index.html", text: "guides"}]}
 
 baseurl: /linux
 
