--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ defaults:
   - scope: {path: ""}
     values: {layout: default}
   - scope: {path: "news"}
-    values: {crumbs: [{link: "/news/index.html", text: "news"}]}
+    values: {crumbs: [{link: "/news/index.html", text: "News"}]}
   - scope: {path: "guides"}
-    values: {crumbs: [{link: "/guides/index.html", text: "guides"}]}
+    values: {crumbs: [{link: "/guides/index.html", text: "Guides"}]}
 
 baseurl: /linux
 
