--- a/_data/events.yml
+++ b/_data/events.yml
@@ -12,6 +12,15 @@
 #   location_url: https://www.openstreetmap.org/?mlat={{lat}}&mlon={{lon}}&zoom=16 # https://www.latlong.net/
 - title: Linux Install Party
   organiser: ARC / DigiEd
+  url: https://pretix.eu/ARC/linux-install-party-2511
+  summary: A Linux install party is both, a place for newcomers who want a taste of Linux or help with installations, and a place for Linux enthusiasts who want to experiment with new distros or help the newcomers in choosing their first distro. 
+  date: 2025-11-26
+  time: "16:00"
+  duration:
+    hours: 2.5
+  location: IOE, Bedford Way 20 - Room C3.13
+- title: Linux Install Party
+  organiser: ARC / DigiEd
   url: https://pretix.eu/ARC/linux-install-party-2510
   summary: A Linux install party is both, a place for newcomers who want a taste of Linux or help with installations, and a place for Linux enthusiasts who want to experiment with new distros or help the newcomers in choosing their first distro. 
   date: 2025-10-29
